WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
56304
REGRESSION(
r80892
): 100,000+ leaks seen on the build bot
https://bugs.webkit.org/show_bug.cgi?id=56304
Summary
REGRESSION(r80892): 100,000+ leaks seen on the build bot
Mark Rowe (bdash)
Reported
2011-03-14 05:14:19 PDT
After
r80892
there are over 100,000 leaks reported on the leaks bot. Prior to that revision the number was much, much smaller.
Attachments
Patch
(5.24 KB, patch)
2011-03-14 05:24 PDT
,
Mark Rowe (bdash)
oliver
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2011-03-14 05:15:50 PDT
The reason for this is that
r80892
adds duplicate static function entries to the JSClassDefinition in DumpRenderTree’s LayoutTestController.cpp. This appears to cause JavaScriptCore to leak each of the duplicates. This is triggered every time the window object is cleared (once per frame per test?).
Mark Rowe (bdash)
Comment 2
2011-03-14 05:24:31 PDT
Created
attachment 85668
[details]
Patch The explicit calls to StringImpl::ref seem as though they will also result in leaks as there are no matching calls to StringImpl::deref anywhere. The patch removes those as well as fixing the bigger issue of the leaked duplicate entries.
Mark Rowe (bdash)
Comment 3
2011-03-14 13:41:17 PDT
Fixed in
r81051
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug