<http://webkit.org/b/56304> REGRESSION(r80892): 100,000+ leaks seen on the build bot

Reviewed by Oliver Hunt.

Source/JavaScriptCore:

* API/JSClassRef.cpp:
(OpaqueJSClass::OpaqueJSClass): Don't leak any existing entry for the given name if
the class definition contains duplicates. This also removes what look to be leaks
of the StringImpl instances that are used as keys: the HashMap key type is a RefPtr
which retains / releases the instances at the appropriate time, so explicitly calling
ref is not necessary.

Tools:

* DumpRenderTree/LayoutTestController.cpp:
(LayoutTestController::staticFunctions): Remove duplicate entries.

Canonical link: https://commits.webkit.org/70931@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@81051 268f45cc-cd09-0410-ab3c-d52691b4dbfc